--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:15572371265:ios:d011967eb535661f3e03c0",
-  "FIREBASE_PROJECT_ID": "transmaa-d362b",
-  "GCM_SENDER_ID": "15572371265"
+  "GOOGLE_APP_ID": "1:487559396972:ios:f30737ce6a8226a5a5a249",
+  "FIREBASE_PROJECT_ID": "otpdemo-338f4",
+  "GCM_SENDER_ID": "487559396972"
 }
