--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:317818174779:ios:62c26e60ccf4692f660b1e",
-  "FIREBASE_PROJECT_ID": "transmaa-9fa8e",
-  "GCM_SENDER_ID": "317818174779"
+  "GOOGLE_APP_ID": "1:1027174012052:ios:b8a6606f446b22d1fc9081",
+  "FIREBASE_PROJECT_ID": "projectfinal-368c3",
+  "GCM_SENDER_ID": "1027174012052"
 }
