--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:1027174012052:ios:ac03302e766e97b5fc9081",
-  "FIREBASE_PROJECT_ID": "projectfinal-368c3",
-  "GCM_SENDER_ID": "1027174012052"
+  "GOOGLE_APP_ID": "1:825357754795:ios:f88ee48c6aafdb4d82b2ee",
+  "FIREBASE_PROJECT_ID": "logisticss-1ef6c",
+  "GCM_SENDER_ID": "825357754795"
 }
