--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:825357754795:ios:0e1179a2b040604f82b2ee",
-  "FIREBASE_PROJECT_ID": "logisticss-1ef6c",
-  "GCM_SENDER_ID": "825357754795"
+  "GOOGLE_APP_ID": "1:977743006223:ios:37d5db1a187e84a600f17a",
+  "FIREBASE_PROJECT_ID": "newotp-60ee9",
+  "GCM_SENDER_ID": "977743006223"
 }
