--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:825357754795:ios:f88ee48c6aafdb4d82b2ee",
-  "FIREBASE_PROJECT_ID": "logisticss-1ef6c",
-  "GCM_SENDER_ID": "825357754795"
+  "GOOGLE_APP_ID": "1:977743006223:ios:b864843e78101c5d00f17a",
+  "FIREBASE_PROJECT_ID": "newotp-60ee9",
+  "GCM_SENDER_ID": "977743006223"
 }
