--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   cloud_firestore: ^4.14.0
   google_sign_in: ^6.2.1
   shared_preferences: ^2.2.2
+  firebase_messaging: ^14.7.16
+  flutter_local_notifications: ^16.3.2
+  http: ^1.2.0
+  cloud_firestore_web: ^3.10.5
 
 dev_dependencies:
   flutter_test:
