--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_local_notifications: ^16.3.2
   http: ^1.2.0
   cloud_firestore_web: ^3.10.5
+  twilio_flutter: ^0.3.0
 
 dev_dependencies:
   flutter_test:
